--- a/assets/CSS/snapNslide.css
+++ b/assets/CSS/snapNslide.css
@@ -7,7 +7,41 @@ body {
 
 #snapNslide {
 	height: 50px;
-	width: 341px;
+	width: 355px;
 	margin: 25% auto 0;
-	background: url(../Graphics/slideTrench.gif) 0 12px repeat-x;
+	background: url(../Graphics/sliderTrench.png) 0 12px repeat-x;
+	opacity: 0.99;
+}
+
+.mainNode_slot {
+	height: 12px;
+	width: 12px;
+	margin: 9px 50px 0 -6px;
+	float: left;
+	background: url(../Graphics/mainNode.png) center center no-repeat;
+}
+
+.mainNode_slot:nth-last-of-type(2) {
+	margin-right: -6px;
+}
+
+.terminalNode_slot {
+	height: 22px;
+	width: 22px;
+	float: left;
+	margin: 4px 15px 0 0;
+	background:  url(../Graphics/terminalNode.png) center center no-repeat;
+}
+
+.terminalNode_slot:last-child {
+	margin-right: -1px;
+	margin-left: 17px;
+}
+
+.terminalNode_tab {
+	height: 22px;
+	width: 22px;
+	margin-top: 4px;
+	position: absolute;
+	background:  url(../Graphics/terminalNodeTab.png) center center no-repeat;
 }
